# Double-Linked-List-Viewer

./: .gitignore  CMakeLists.txt  README.md
formattedData/: actressDataSet.csv
src/: main.cpp
src/doubleLinkedList/: list.cpp  list.hpp  listNode.cpp  listNode.hpp
tools/: csvFormatting.cpp  csvFormatting.hpp
